added icons, added info about user created report

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,18 @@
       name="CRM Lite"
       content="CRM Lite CRM Lite — это простая система управления, предназначенная для небольшой команды"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
+    <meta name="apple-mobile-web-app-title" content="ВкусВилл">
+    <link rel="manifest" href="/manifest.json?v=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img//favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img//favicon-16x16.png?v=1">
+    <link rel="mask-icon" href="/assets/img//safari-pinned-tab.svg?v=1" color="#2dbe64">
+    <link rel="shortcut icon" href="/assets/img//favicon.ico?v=1">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="theme-color" content="#ffffff">
     <title>CRM Lite</title>
   </head>
   <body>
