--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#e8e8e8" />
     <meta
       name="CRM Lite"
       content="CRM Lite CRM Lite — это простая система управления, предназначенная для небольшой команды"
